--- a/frontend/index.html
+++ b/frontend/index.html
@@ -15,7 +15,7 @@
 
 
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Nagar Ninjas</title>
+    <title>CityCare-Portal</title>
   </head>
   <body>
     <div id="root"></div>
